--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -13,3 +13,10 @@ ul {
 input:focus-visible {
     outline: none;
 }
+
+body {
+    font: 14px/1.5 Helvetica Neue,Helvetica,Arial,Microsoft Yahei,Hiragino Sans GB,Heiti SC,WenQuanYi Micro Hei,sans-serif;
+    color: #333;
+    background-color: #fff;
+    min-width: 1226px;
+}
